Fix splitview splitter alignment

--- a/src/browser/base/content/zen-styles/zen-decks.css
+++ b/src/browser/base/content/zen-styles/zen-decks.css
@@ -35,7 +35,7 @@
   --zen-split-column-gap: calc(var(--zen-element-separation) + 1px);
 }
 
-#tabbrowser-tabpanels:has(> [zen-split='true']) {
+#tabbrowser-tabpanels:has(> [zen-split='true']), #zen-splitview-splitterbox {
   margin-right: calc(var(--zen-element-separation) - var(--zen-split-row-gap)/2);
   margin-bottom: calc(var(--zen-element-separation) - var(--zen-split-column-gap)/2);
   margin-top: calc(var(--zen-split-row-gap)/-2);
@@ -52,15 +52,17 @@ margin-left: calc(-var(--zen-split-row-gap)/2);
 
 #zen-splitview-overlay {
   position: absolute;
-  width: calc(100% - var(--zen-element-separation));
-  height: calc(100% - var(--zen-element-separation));
+  width: 100%;
+  height: 100%;
   pointer-events: none;
+  padding: inherit;
 }
 
 #zen-splitview-splitterbox {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: relative;
+  flex: 1;
+  padding-right: var(--zen-element-separation);
+  padding-bottom: var(--zen-element-separation);
   z-index: 2;
 }
 
@@ -73,7 +75,7 @@ margin-left: calc(-var(--zen-split-row-gap)/2);
 }
 
 .zen-split-view-splitter[orient='vertical'] {
-  width: var(--zen-split-column-gap);
+  width: var(--zen-split-row-gap);
   margin-left: calc(var(--zen-split-row-gap) * -1);
 }
 
